tests/errors/sem.type-mismatch.enum-decl.or
main :: () -> void {
    enum {
        foo = "foo";
    };
};
